# csharp-driver-f

./: .gitignore  BENCHMARKING.md  Makefile  README.md
.github/workflows/: docs-pages.yml  main.yml
benchmark/: Makefile  README.md
benchmark/csharp-driver/: Common.cs
benchmark/datastax-csharp-driver/: DatastaxCSharpBench.csproj  Program.cs
benchmark/docker-composes/: cassandra-single-node.yml  cassandra-three-nodes.yml  cassandra-two-machine-A.yml  cassandra-two-machine-B.yml  scylla-1node-1shard.yml  scylla-3nodes-1shard.yml  scylla-3nodes-2shards.yml  scylla-two-machine-A.yml  scylla-two-machine-B.yml
benchmark/new-csharp-driver/: Program.cs  ScyllaCSharpBench.csproj
benchmark/runner-config/: config.yml  run-csharp-benchmark.sh
benchmark/rust-driver/: Cargo.toml
docs/source/: conf.py
examples/: README.MD  examples.sln
examples/Collections/: Collections.csproj  Program.cs
examples/Demo/: Demo.csproj  Program.cs
examples/Duration/: Duration.csproj  Program.cs
examples/GetByName/: GetByName.csproj  Program.cs
examples/Logging/: Logging.csproj  Program.cs
examples/Prepared/: Prepared.csproj  Program.cs
examples/SchemaMetadata/: Program.cs  SchemaMetadata.csproj
examples/Simple/: Program.cs  Simple.csproj
examples/UserDefinedTypes/: Program.cs  UserDefinedTypes.csproj
examples/Uuids/: Program.cs  (+1 more)
rust/: Cargo.toml
rust/src/: error_conversion.rs  ffi.rs  lib.rs  logging.rs  metadata.rs  pre_serialized_values.rs  prepared_statement.rs  row_set.rs  session.rs  session_config.rs  socket_options.rs  task.rs
src/: Cassandra.sln
(+164 files in other folders)
