[package]
name = "csharp_wrapper"
version = "0.0.0"
edition = "2024"

[dependencies]
scylla = { version = "1.7.0", git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "60fd145", features = [
    "unstable-csharp-rs",
] }
scylla-cql-core = { version = "1.7.0", git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "60fd145", package = "scylla-cql" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1.41"
uuid = "1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lib]
crate-type = ["cdylib", "lib"] # "lib" needed for doctests

[features]
integration_testing = []

[profile.dev]
# Setting `panic = "abort"` guarantees the process will terminate on
# panic instead of unwinding, avoiding undefined behavior across the FFI
# boundary and making the program's failure more deterministic.
panic = "abort"

[profile.release]
# Same for release builds: ensure no unwinding occurs across the FFI
# boundary when this library is used by managed code.
panic = "abort"

[dev-dependencies]
ntest = "0.9"

[lints.rust]
unsafe-op-in-unsafe-fn = "warn"
unnameable_types = "warn"
# unreachable_pub = "warn"
